--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.1",
     "globals": "^15.9.0",
     "prettier": "^3.8.1",
     "vite": "^5.4.2"
