--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently -n api,front -c blue,green \"npm run dev --prefix api\" \"vite\"",
+    "dev:front": "vite",
+    "dev:api": "npm run dev --prefix api",
     "build": "vite build",
     "preview": "vite preview",
     "prepare": "husky install",
@@ -27,6 +29,7 @@
   "homepage": "https://github.com/Muhmmedmedhat0/padre-ginos#readme",
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
+    "concurrently": "^9.2.1",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
