--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "homepage": "https://github.com/Muhmmedmedhat0/padre-ginos#readme",
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.65.0",
+    "@tanstack/router-plugin": "^1.65.0",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.3.1",
@@ -41,6 +43,7 @@
     "vite": "^5.4.2"
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.65.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
