--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "homepage": "https://github.com/Muhmmedmedhat0/padre-ginos#readme",
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.59.7",
+    "@tanstack/react-query-devtools": "^5.59.13",
     "@tanstack/router-devtools": "^1.65.0",
     "@tanstack/router-plugin": "^1.65.0",
     "@types/react": "^19.2.14",
@@ -39,10 +41,12 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.1",
     "globals": "^15.9.0",
+    "husky": "^9.1.7",
     "prettier": "^3.8.1",
-    "vite": "^5.4.2"
+    "vite": "^7.3.1"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.13",
     "@tanstack/react-router": "^1.65.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
